[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/menu.gd" type="Script" id=1]
[ext_resource path="res://ui/shaders/blur_color.gdshader" type="Shader" id=2]
[ext_resource path="res://ui/theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/textures/menu.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/blur = 2.0

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_in"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_out"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 32.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="MenuButton" type="TextureButton" parent="MarginContainer"]
margin_left = 1164.0
margin_top = 4.0
margin_right = 1196.0
margin_bottom = 36.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
texture_normal = ExtResource( 4 )

[node name="MenuContainer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="MenuContainer"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="CenterContainer" type="CenterContainer" parent="MenuContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/CenterContainer"]
margin_left = 488.0
margin_top = 225.0
margin_right = 712.0
margin_bottom = 449.0

[node name="MusicVolumeLabel" type="Label" parent="MenuContainer/CenterContainer/VBoxContainer"]
margin_right = 224.0
margin_bottom = 16.0
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="MenuContainer/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 224.0
margin_bottom = 40.0
mouse_default_cursor_shape = 10
max_value = 1.0
step = 0.0
value = 0.5

[node name="HSeparator" type="HSeparator" parent="MenuContainer/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 224.0
margin_bottom = 60.0

[node name="EffectsVolumeLabel" type="Label" parent="MenuContainer/CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 224.0
margin_bottom = 84.0
text = "Effects Volume"

[node name="EffectsVolume" type="HSlider" parent="MenuContainer/CenterContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 224.0
margin_bottom = 108.0
mouse_default_cursor_shape = 10
max_value = 1.0
step = 0.0
value = 0.5

[node name="HSeparator2" type="HSeparator" parent="MenuContainer/CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 224.0
margin_bottom = 128.0

[node name="ContinueButton" type="Button" parent="MenuContainer/CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 224.0
margin_bottom = 176.0
mouse_default_cursor_shape = 2
text = "Continue"

[node name="QuitButton" type="Button" parent="MenuContainer/CenterContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 224.0
margin_bottom = 224.0
mouse_default_cursor_shape = 2
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/fade_in = SubResource( 4 )
anims/fade_out = SubResource( 6 )

[connection signal="pressed" from="MarginContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="value_changed" from="MenuContainer/CenterContainer/VBoxContainer/MusicVolume" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="MenuContainer/CenterContainer/VBoxContainer/EffectsVolume" to="." method="_on_effects_volume_changed"]
[connection signal="pressed" from="MenuContainer/CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MenuContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
